<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.comseung.mymathcalculator.MainFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_mainFragment_to_numberTheoryFragment"
            app:destination="@id/numberTheoryFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/numberTheoryFragment"
        android:name="com.comseung.mymathcalculator.numbertheory.NumberTheoryFragment"
        android:label="@string/numbertheory" >
        <action
            android:id="@+id/action_numberTheoryFragment_to_gcdFragment"
            app:destination="@id/gcdFragment"
            app:popUpTo="@id/numberTheoryFragment" />
        <action
            android:id="@+id/action_numberTheoryFragment_to_lcmFragment"
            app:destination="@id/lcmFragment"
            app:popUpTo="@id/numberTheoryFragment" />
        <action
            android:id="@+id/action_numberTheoryFragment_to_euclidGcd"
            app:destination="@id/euclidGcd"
            app:popUpTo="@id/numberTheoryFragment" />
        <action
            android:id="@+id/action_numberTheoryFragment_to_diophantusFragment"
            app:destination="@id/diophantusFragment"
            app:popUpTo="@id/numberTheoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/gcdFragment"
        android:name="com.comseung.mymathcalculator.numbertheory.functions.GcdFragment"
        android:label="@string/gcd" />
    <fragment
        android:id="@+id/lcmFragment"
        android:name="com.comseung.mymathcalculator.numbertheory.functions.LcmFragment"
        android:label="@string/lcm" />
    <fragment
        android:id="@+id/euclidGcd"
        android:name="com.comseung.mymathcalculator.numbertheory.functions.EuclidGcd"
        android:label="@string/euclidGcd" />
    <fragment
        android:id="@+id/diophantusFragment"
        android:name="com.comseung.mymathcalculator.numbertheory.functions.DiophantusFragment"
        android:label="@string/diophantus" />
</navigation>