<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/insert_some_value"
        app:layout_constraintStart_toStartOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/label1" />

    <EditText
        android:id="@+id/value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/insert_some_value"
        app:layout_constraintStart_toStartOf="@+id/label2"
        app:layout_constraintTop_toBottomOf="@+id/label2" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="x = 1"
        app:layout_constraintStart_toStartOf="@+id/label_result"
        app:layout_constraintTop_toBottomOf="@+id/label_result" />

    <TextView
        android:id="@+id/resultDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:textSize="20sp"
        android:paddingHorizontal="10dp"
        tools:text="Hello Nice to meet you how are you?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="v1" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="v2"
        app:layout_constraintStart_toStartOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/value1" />

    <TextView
        android:id="@+id/label_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value2" />

</androidx.constraintlayout.widget.ConstraintLayout>